--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="./src/assets/images/icons8-totoro-16.png" type="image/x-icon">
